map table testbench, issue with same rd and rs

--- a/maptable/Makefile
+++ b/maptable/Makefile
@@ -1,93 +1,32 @@
-# make          <- runs simv (after compiling simv if needed)
-# make all      <- runs simv (after compiling simv if needed)
-# make simv     <- compile simv if needed (but do not run)
-# make syn      <- runs syn_simv (after synthesizing if needed then 
-#                                 compiling synsimv if needed)
-# make clean    <- remove files created during compilations (but not synthesis)
-# make nuke     <- remove all files created during compilation and synthesis
-#
-# To compile additional files, add them to the TESTBENCH or SIMFILES as needed
-# Every .vg file will need its own rule and one or more synthesis scripts
-# The information contained here (in the rules for those vg files) will be 
-# similar to the information in those scripts but that seems hard to avoid.
-#
-#
-
-SOURCE = test_progs/sampler.s
-
-CRT = crt.s
-LINKERS = linker.lds
-ASLINKERS = aslinker.lds
-
-DEBUG_FLAG = -g
-CFLAGS =  -mno-relax -march=rv32im -mabi=ilp32 -nostartfiles -std=gnu11 -mstrict-align -mno-div 
-OFLAGS = -O0
-ASFLAGS = -mno-relax -march=rv32im -mabi=ilp32 -nostartfiles -Wno-main -mstrict-align
-OBJFLAGS = -SD -M no-aliases 
-OBJDFLAGS = -SD -M numeric,no-aliases
-
-##########################################################################
-# IF YOU AREN'T USING A CAEN MACHINE, CHANGE THIS TO FALSE OR OVERRIDE IT
-CAEN = 1
-##########################################################################
-ifeq (1, $(CAEN))
-	GCC = riscv gcc
-	OBJDUMP = riscv objdump
-	AS = riscv as
-	ELF2HEX = riscv elf2hex
-else
-	GCC = riscv64-unknown-elf-gcc
-	OBJDUMP = riscv64-unknown-elf-objdump
-	AS = riscv64-unknown-elf-as
-	ELF2HEX = elf2hex
-endif
-
-
-VCS = vcs -V -sverilog +vc -Mupdate -line -full64 +vcs+vcdpluson -debug_pp
+VCS = SW_VCS=2017.12-SP2-1 vcs +v2k -sverilog +vc -Mupdate -line -full64 +define+DEBUG -cm line+tgl+cond+branch+fsm
 LIB = /afs/umich.edu/class/eecs470/lib/verilog/lec25dscc25.v
 
-# SIMULATION CONFIG
+all:    simv
+	./simv -cm line+tgl+cond+branch+fsm | tee program.out
+	urg -dir simv.vdb -format text
+##### 
+# Modify starting here
+#####
 
-HEADERS     = $(wildcard *.svh)
-# TESTBENCH   = $(wildcard testbench/*.sv)
-# TESTBENCH  += $(wildcard testbench/*.c)
-TESTBENCH	= testbench/ROB_tb.sv
-# PIPEFILES   = $(wildcard verilog/*.sv)
-PIPEFILES	= verilog/ROB.sv
+TESTBENCH = maptable_tb.sv
 
-SIMFILES    = $(PIPEFILES)
+SIMFILES  = maptable.sv
+
+HEADERS   = sys_defs.svh
 
 # SYNTHESIS CONFIG
-SYNTH_DIR = ./synth
+SYNTH_DIR = ./syn
+SYNFILES  = $(SYNTH_DIR)/RAT.vg
 
-export HEADERS
-export PIPEFILES
+$(SYNFILES):	RAT.sv syn/RAT.syn.tcl
+	mkdir -p syn
+	cd $(SYNTH_DIR) && dc_shell-t -f RAT.syn.tcl | tee RAT_synth.out
 
-# export PIPELINE_NAME = pipeline
-export PIPELINE_NAME = ROB
 
-PIPELINE  = $(SYNTH_DIR)/$(PIPELINE_NAME).vg 
-SYNFILES  = $(PIPELINE) $(SYNTH_DIR)/$(PIPELINE_NAME)_svsim.sv
-
-# Passed through to .tcl scripts:
-export CLOCK_NET_NAME = clock
-export RESET_NET_NAME = reset
-export CLOCK_PERIOD   = 10	# TODO: You will need to make match SYNTH_CLOCK_PERIOD in sys_defs
-                                #       and make this more aggressive
-
-################################################################################
-## RULES
-################################################################################
-
-# Default target:
-all:    simv
-	./simv | tee program.out
-
-.PHONY: all
-
-# Simulation:
-
-sim:	simv
+#####
+# Should be no need to modify after here
+#####
+sim:	simv $(ASSEMBLED)
 	./simv | tee sim_program.out
 
 simv:	$(HEADERS) $(SIMFILES) $(TESTBENCH)
@@ -95,53 +34,21 @@ simv:	$(HEADERS) $(SIMFILES) $(TESTBENCH)
 
 .PHONY: sim
 
-# Programs
 
-compile: $(CRT) $(LINKERS)
-	$(GCC) $(CFLAGS) $(OFLAGS) $(CRT) $(SOURCE) -T $(LINKERS) -o program.elf
-	$(GCC) $(CFLAGS) $(DEBUG_FLAG) $(CRT) $(SOURCE) -T $(LINKERS) -o program.debug.elf
-assemble: $(ASLINKERS)
-	$(GCC) $(ASFLAGS) $(SOURCE) -T $(ASLINKERS) -o program.elf 
-	cp program.elf program.debug.elf
-disassemble: program.debug.elf
-	$(OBJDUMP) $(OBJFLAGS) program.debug.elf > program.dump
-	$(OBJDUMP) $(OBJDFLAGS) program.debug.elf > program.debug.dump
-	rm program.debug.elf
-hex: program.elf
-	$(ELF2HEX) 8 8192 program.elf > program.mem
+# updated interactive debugger "DVE", using the latest version of VCS
+# awdeorio fall 2011
+dve:	$(HEADERS) $(SIMFILES) $(TESTBENCH)
+	$(VCS) +memcbk $(HEADERS) $(SIMFILES) $(TESTBENCH) -o dve -R -gui
 
-program: compile disassemble hex
-	@:
-
-debug_program:
-	gcc -lm -g -std=gnu11 -DDEBUG $(SOURCE) -o debug_bin
-assembly: assemble disassemble hex
-	@:
-
-
-# Synthesis
-
-$(PIPELINE): $(SIMFILES) $(SYNTH_DIR)/$(PIPELINE_NAME).tcl
-	cd $(SYNTH_DIR) && dc_shell-t -f ./$(PIPELINE_NAME).tcl | tee $(PIPELINE_NAME)_synth.out
-	echo -e -n 'H\n1\ni\n`timescale 1ns/100ps\n.\nw\nq\n' | ed $(PIPELINE)
-
-syn:	syn_simv 
-	./syn_simv | tee syn_program.out
+dve_syn:	$(HEADERS) $(SYNFILES) $(TESTBENCH)
+	$(VCS) +memcbk $(HEADERS) $(TESTBENCH) $(SYNFILES) $(LIB) -o dve -R -gui
 
 syn_simv:	$(HEADERS) $(SYNFILES) $(TESTBENCH)
-	$(VCS) $^ $(LIB) +define+SYNTH_TEST -o syn_simv 
+	$(VCS) $(HEADERS) $(TESTBENCH) $(SYNFILES) $(LIB) -o syn_simv
 
-.PHONY: syn
+syn:	syn_simv
+	./syn_simv | tee syn_program.out
 
-# Debugging
-
-dve:	sim
-	./simv -gui &
-
-dve_syn: syn_sim 
-	./syn_simv -gui &
-
-.PHONY: dve dve_syn 
 
 clean:
 	rm -rf *simv *simv.daidir csrc vcs.key program.out *.key
@@ -152,9 +59,8 @@ clean:
 	rm -f *.elf *.dump *.mem debug_bin
 
 nuke:	clean
-	rm -rf synth/*.vg synth/*.rep synth/*.ddc synth/*.chk synth/*.log synth/*.syn
-	rm -rf synth/*.out command.log synth/*.db synth/*.svf synth/*.mr synth/*.pvl
-
-Robin:
-	git config user.name "xiongrob"
-	git config user.email "62448777+xiongrob@users.noreply.github.com"
+	rm -rf syn/*.vg syn/*.rep syn/*.ddc syn/*.chk *.log syn/*.syn
+	rm -rf syn/*.out syn/command.log syn/*.db syn/*.svf syn/*.mr syn/*.pvl 
+	rm -rf *.vdb syn/*.res syn/*_svsim.sv
+	
+.PHONY: dve clean nuke	
