Finalize DP and add test ports IB RS ROB and PIPELINE

--- a/maptable/Makefile
+++ b/maptable/Makefile
@@ -16,11 +16,11 @@ HEADERS   = sys_defs.svh
 
 # SYNTHESIS CONFIG
 SYNTH_DIR = ./syn
-SYNFILES  = $(SYNTH_DIR)/maptable.vg
+SYNFILES  = $(SYNTH_DIR)/MT.vg
 
-$(SYNFILES):	maptable.sv syn/maptable.tcl
+$(SYNFILES):	MT.sv syn/MT.tcl
 	mkdir -p syn
-	cd $(SYNTH_DIR) && dc_shell-t -f maptable.tcl | tee maptable_synth.out
+	cd $(SYNTH_DIR) && dc_shell-t -f MT.tcl | tee MT_synth.out
 
 
 #####
